@@ -1,7 +1,9 @@
 package com.sprint.mission.discodeit.basic;
 
+import com.sprint.mission.discodeit.dto.BinaryContentDto;
 import com.sprint.mission.discodeit.entity.BinaryContent;
 import com.sprint.mission.discodeit.exception.ResourceNotFoundException;
+import com.sprint.mission.discodeit.mapper.BinaryContentMapper;
 import com.sprint.mission.discodeit.repository.BinaryContentRepository;
 import com.sprint.mission.discodeit.service.BinaryContentService;
 import com.sprint.mission.discodeit.storage.BinaryContentStorage;
@@ -11,8 +13,8 @@ import org.springframework.stereotype.Service;
 
 import java.io.IOException;
 import java.util.List;
-import java.util.NoSuchElementException;
 import java.util.UUID;
+import java.util.stream.Collectors;
 
 @Slf4j
 @RequiredArgsConstructor
@@ -21,9 +23,10 @@ public class BasicBinaryContentService implements BinaryContentService {
 
     private final BinaryContentRepository binaryContentRepository;
     private final BinaryContentStorage binaryContentStorage;
+    private final BinaryContentMapper binaryContentMapper;
 
     @Override
-    public BinaryContent create(String fileName, Long size, String contentType, byte[] data) {
+    public BinaryContentDto create(String fileName, Long size, String contentType, byte[] data) {
         UUID id = UUID.randomUUID();
 
         try {
@@ -35,27 +38,28 @@ public class BasicBinaryContentService implements BinaryContentService {
                     .contentType(contentType)
                     .build();
             
-            // 저장 후 ID 확인
-            BinaryContent saved = binaryContentRepository.save(binaryContent);
-            log.info("바이너리 콘텐츠 저장 완료: {}", saved.getId());
-            return saved;
-        } catch (IOException e) {
+            BinaryContent savedContent = binaryContentRepository.save(binaryContent);
+            log.info("바이너리 콘텐츠 저장 완료: {}", savedContent.getId());
+            return binaryContentMapper.toDto(savedContent);
+        } catch (Exception e) {
             log.error("파일 저장 실패: {}", e.getMessage());
             throw new RuntimeException("파일 저장 중 오류가 발생했습니다: " + e.getMessage(), e);
         }
     }
 
     @Override
-    public BinaryContent find(UUID binaryContentId) {
-        return binaryContentRepository.findById(binaryContentId)
+    public BinaryContentDto find(UUID binaryContentId) {
+        BinaryContent binaryContent = binaryContentRepository.findById(binaryContentId)
                 .orElseThrow(() -> new ResourceNotFoundException(
                         "바이너리 콘텐츠", "id", binaryContentId));
+        return binaryContentMapper.toDto(binaryContent);
     }
 
     @Override
-    public List<BinaryContent> findAllByIdIn(List<UUID> binaryContentIds) {
+    public List<BinaryContentDto> findAllByIdIn(List<UUID> binaryContentIds) {
         return binaryContentRepository.findAllByIdIn(binaryContentIds).stream()
-                .toList();
+                .map(binaryContentMapper::toDto)
+                .collect(Collectors.toList());
     }
 
     @Override
